--- a/app/global.css
+++ b/app/global.css
@@ -74,7 +74,7 @@ html {
   @apply bg-neutral-50 dark:bg-neutral-900 rounded-lg overflow-x-auto border border-neutral-200 dark:border-neutral-900 py-2 px-3 text-sm;
 }
 
-.prose code:not(.language-math) {
+.prose p>code:not(.language-math) {
   @apply bg-neutral-100 dark:bg-neutral-800 rounded-lg;
 }
 
