--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -79,9 +79,10 @@ const homeUrl = isEnglish ? "/" : "/zh/";
           id="menu-items"
           class:list={[
             "mt-4 grid w-44 grid-cols-2 place-content-center gap-2",
+            "bg-background border border-skin-line rounded-lg p-2 shadow-lg",
             "[&>li>a]:block [&>li>a]:px-4 [&>li>a]:py-3 [&>li>a]:text-center [&>li>a]:font-medium [&>li>a]:hover:text-accent sm:[&>li>a]:px-2 sm:[&>li>a]:py-1",
             "hidden",
-            "sm:mt-0 sm:flex sm:w-auto sm:gap-x-5 sm:gap-y-0",
+            "sm:mt-0 sm:flex sm:w-auto sm:gap-x-5 sm:gap-y-0 sm:bg-transparent sm:border-none sm:p-0 sm:shadow-none",
           ]}
         >
           <li class="col-span-2">
