--- a/src/components/BackToTopButton.astro
+++ b/src/components/BackToTopButton.astro
@@ -6,7 +6,7 @@ import IconArrowNarrowUp from "@/assets/icons/IconArrowNarrowUp.svg";
 <div
   id="btt-btn-container"
   class:list={[
-    "fixed end-4 bottom-8 z-50",
+    "fixed start-4 bottom-8 z-50",
     "md:sticky md:end-auto md:float-end md:me-1",
     "translate-y-14 opacity-0 transition duration-500",
   ]}
