--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -23,7 +23,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
 <Layout>
   <Header translationUrl="/" />
   <main id="main-content" data-layout="index">
-    <section id="hero" class="pt-8 pb-6">
+    <section id="hero" class="pt-8 pb-6 animate-fade-in-up">
       <h1 class="my-4 inline-block text-4xl font-bold sm:my-8 sm:text-5xl">
         一点旁注
       </h1>
