--- a/src/components/WorkCard.astro
+++ b/src/components/WorkCard.astro
@@ -16,7 +16,7 @@ try {
 }
 ---
 
-<li class="rounded-lg border border-skin-line bg-skin-card/50 p-4 transition hover:bg-skin-fill/10">
+<li class="glass rounded-xl p-4 transition-all duration-300 hover:-translate-y-1 hover:shadow-lg">
   <a
     href={href}
     target="_blank"
